# IntershipTask-Inno

./: .env.template  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
weather_service/: models.py  serializers.py  services.py  urls.py  views.py  views_docs.py
weather_service/migrations/: 0001_initial.py
